add JWT Auth
